# lc

./: CMakeLists.txt  Cargo.toml  Makefile  README.md
.github/workflows/: build-release.yaml
include/: config.h  openai.h
src/: config.cpp  config.rs  main.cpp  main.rs  openai.cpp  openai.rs
